# oneclick-trip

./: .gitignore  DESIGN.md  PRODUCT.md  README.md
ai/: README.md
ai/travel_agent/: .env.example  README.md  pyproject.toml
ai/travel_agent/app/: config.py  main.py
ai/travel_agent/app/agents/: direct_modify_agent.py  direct_planner_agent.py  intent_agent.py  meal_planning.py  modify_agent.py  plan_presenter.py  planner_agent.py  query_presenter.py  research_agent.py  reviewer_agent.py  revision_agent.py
ai/travel_agent/app/booking/: java_backend.py
ai/travel_agent/app/database/: java_backend.py
ai/travel_agent/app/domain/: models.py
ai/travel_agent/app/graph/: builder.py  tool_runtime.py
ai/travel_agent/app/graph/nodes/modify/: direct_modify.py
ai/travel_agent/app/graph/subgraphs/: modify.py
ai/travel_agent/app/memory/: checkpoints.py
ai/travel_agent/app/poc/: __init__.py  agent_reach_cli.py
ai/travel_agent/app/tools/: contracts.py  factory.py  provider_tools.py  selector.py
ai/travel_agent/app/tools/providers/: __init__.py  contracts.py  nominatim.py  open_meteo.py  osrm.py
ai/travel_agent/app/tools/research/: __init__.py  agent_reach.py  cache.py  coordinator.py  policy.py  quality.py  tool.py  xiaohongshu.py
ai/travel_agent/tests/: test_agent_reach_poc.py  test_budget_conversation_matrix.py  test_checkpoints.py  test_intent_and_routing.py  test_meal_planning.py  test_modify_subgraph.py  test_multi_turn_conversation.py  test_real_tool_providers.py  test_research_quality.py  test_travel_research_integration.py  test_xiaohongshu_research.py
(+149 files in other folders)
