[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "oneclick-travel-agent"
version = "0.8.0"
description = "LangGraph-based travel concierge agent"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.139,<0.140",
    "httpx[socks]>=0.28,<1",
    "huggingface-hub>=1.0,<2",
    "jieba>=0.42,<0.43",
    "aiomysql>=0.3,<0.4",
    "chromadb>=1.0,<2",
    "langchain>=1.3,<1.4",
    "langchain-openai>=1.1,<2",
    "langgraph>=1.2,<1.3",
    "langgraph-checkpoint-redis>=0.5,<0.6",
    "numpy>=2.3,<3",
    "onnxruntime>=1.27,<2",
    "pandas>=2.3,<3",
    "pydantic>=2.13,<3",
    "python-dotenv>=1.2,<2",
    "rank-bm25>=0.2,<0.3",
    "redis>=6,<7",
    "sqlalchemy>=2.0,<2.1",
    "tokenizers>=0.23,<0.24",
    "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1,<10",
]
infrastructure = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
